syntax = "proto3";

option csharp_namespace = "AElf.Miner.Rpc";
import "hash.proto";

message ReponseIndexedInfo{
    repeated HeaderInfo Headers = 1;
}


message RequestIndexedInfo{
    Hash From = 1;
    Hash ChainId = 2;
    uint64 Height = 3;
}

message HeaderInfo{
    Hash BlockHeaderHash = 1;
    Hash TransactionMKRoot = 2;
}

service HeaderInfoRpc {
    rpc GetHeaderInfo(RequestIndexedInfo) returns (ReponseIndexedInfo) {}
}


